# azure-tenant-grapher

./: .atg_graph_version  .batch_fix_types.py  .devcontainer-dependency-setup.md  .env  .env.example  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .roomodes  .secrets.baseline  20250826_223012_tenant_spec.md  20250827_215504_tenant_spec.md  AAD_ENRICHMENT_FIX_SUMMARY.md  AAD_ENRICHMENT_USER_GUIDE.md  ABSOLUTE_FINAL_STATUS.txt  AGENT_MODE_TEST_IMPLEMENTATION.md  ARCHITECTURE_FLOW.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AZURE_DEPENDENCY_FIX.md  AZURE_GLOBALLY_UNIQUE_NAMES_RESEARCH.md  BUGFIX_SCALE_CLI.md  BUG_10_E2E_TEST_BLOCKER.md  CHECKPOINT_1914.txt  CLAUDE.md  CLI_COMMANDS.md  CLI_FIX_PLAN.md  CLI_FLAGS_SUMMARY.md  COMPLETED_WORK_SUMMARY.txt  COMPLETE_SUCCESS_ISSUE570.md  COMPLETE_VICTORY.md  COMPLETE_VICTORY_BOTH_ISSUES.md  CONTINUOUS_EXECUTION_STATUS.md  CONTINUOUS_ITERATION_LOG.md  CURRENT_SESSION_STATUS.md  CURRENT_STATUS.md  DEPLOYMENT_EXECUTION_SUCCESS.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_MONITOR_20251202.md  DEPLOYMENT_STATUS_ISSUE570.md  (+202 more)
.claude/: .version  AMPLIHACK.md  AMPLIHACK_TASKS.md  GRAPH_FILTERING_PRIMER.md  UI_BUG_TEMPLATE.md  WORKFLOW_GUIDE.md  __init__.py  settings.json  settings.json.backup.uvx
.deployments/: AUTONOMOUS_HANDOFF_GUIDE.md  BREAKTHROUGH_SESSION_REPORT.md  COMMIT_LOG.md  CONTINUOUS_SESSION_SUMMARY.md  FINAL_STATUS_BLAST.md  IMPORT_STRATEGY_ROOT_CAUSE.md  ITERATION15_DEPLOYMENT_STATUS.md  ITERATION15_VALIDATION_RESULTS.md  ITERATION_15_LAUNCH.md  PARALLEL_SYSTEMS_STATUS.md  SESSION_CONTINUATION_20251107_131912.md  SESSION_FINALE_SUMMARY.md  SESSION_PROGRESS.md  SMARTDETECTOR_ERROR_ANALYSIS.md  TODOS_ANALYSIS.md  ULTIMATE_SESSION_SUMMARY.md  iteration9_record.json  registry.json
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: ISSUE_AGENTIC_TESTING_SYSTEM.md  ISSUE_AZURE_MCP_INTEGRATION.md  ISSUE_ENHANCED_SIMDOC_IDENTITIES.md  ISSUE_MULTI_TENANT_SUPPORT.md  ISSUE_NOTEBOOK_UI_HOSTING.md  ISSUE_TEMPLATE_azure_tenant_markdown_spec.md  ISSUE_TYPESCRIPT_AGENTIC_TESTING.md  ThreatModellingAgent.md  azure-tenant-grapher-prd.md  azure-tenant-grapher-spec.md  azure-tenant-markdown-spec.md  copilot-instructions.md  exception_handling_refactor_plan.md
Specs/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_SUMMARY.md  ATG_CLIENT_SERVER_ARCHITECTURE.md  AUTOMATIC_IDENTITY_MAPPING_REQUIREMENTS.md  AUTOMATIC_IDENTITY_MAPPING_SUMMARY.md  CTF_ANNOTATION_SERVICE.md  CTF_IMPORT_SERVICE.md  CTF_OVERLAY_ARCHITECTURE.md  DEPLOYMENT_AND_RISK_MITIGATION.md  PRE_IMPLEMENTATION_VERIFICATION.md  README.md  SIMPLIFIED_ARCHITECTURE.md  ServicePrincipalSwitching.md  WHEN_TO_ADD_COMPLEXITY.md
agentic_testing/: MIGRATION_NOTICE.md  README.md  __init__.py  config.py  config.yaml  main.py  models.py  orchestrator.py
config/: scale-config.yaml.example
ctf/: m003-v1-base.tf
demos/: AUTONOMOUS_DEMO_EXECUTION_PROMPT.md  AUTONOMOUS_OPERATION_STATUS.md  AUTONOMOUS_REPLICATION_SUMMARY.md  AUTONOMOUS_SESSION_STATUS_20251015.md  AUTONOMOUS_STATUS_CONTINUOUS.md  AZURE_TENANT_REPLICATION_HANDOFF.md  CLOUD_AGENT_RUNBOOK.md  CLOUD_HANDOFF_2025-10-15.md  CONTINUOUS_OPERATION_STATUS_FINAL.md  CONTINUOUS_OPERATION_SUCCESS.md  CONTINUOUS_SESSION_STATUS_2025-10-15.md  DEMO_QUICK_REFERENCE.md  DEMO_TIER_SELECTION_GUIDE.md  DOCUMENTATION_INDEX.md  FILES_CREATED_FOR_HANDOFF.txt  FINAL_HANDOFF_TO_CLOUD.md  MANIFEST_CLOUD_HANDOFF.md  OBJECTIVE.md  QUICK_START_CLOUD.md  SESSION_HANDOFF_2025-10-15.md  SESSION_HANDOFF_AUTONOMOUS_2025-10-15.md  SESSION_PROGRESS_2025-10-15.md  SESSION_PROGRESS_2025-10-15_2001UTC.md  SESSION_STATUS_2025-10-15.md  SESSION_STATUS_2025-10-15_AUTONOMOUS.md  SESSION_SUMMARY_2025-10-14.md  SESSION_SUMMARY_HANDOFF.md  START_HERE.md  TENANT_REPLICATION_DEMO_PLAN.md  autonomous_loop_status.json  continuous_engine_status.json  continuous_iteration_status.json  engine_state.json  orchestrator_status.json  workstream_status.json
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: ARCHITECTURAL_PATTERN_ANALYSIS.md  ARCHITECTURE_BASED_REPLICATION.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_REPLICATION_LOGIC.md  ARCHITECTURE_REPLICATION_WITH_FIDELITY.md  ATG_ITERATION_WORKFLOW_IMPROVEMENTS.md  AUTOMATED_SERVICE_PRINCIPAL_SETUP.md  AUTONOMOUS_DEPLOYMENT_DOCUMENTATION_SUMMARY.md  AUTONOMOUS_DEPLOYMENT_INDEX.md  AZURE_BASTION_CONNECTION_GUIDE.md  BUG_10_DOCUMENTATION.md  BUG_10_RETCON_DOCUMENTATION_INDEX.md  BUG_52_FIX_SUMMARY.md  BUG_59_DOCUMENTATION.md  BUG_66_DOCUMENTATION.md  BUG_68_DOCUMENTATION.md  BUG_87_DOCUMENTATION.md  BUG_88_DOCUMENTATION.md  BUG_ASSOCIATION_IMPORT_FIX.md  COMPLETE_FILE_MANIFEST.md  COMPLETE_REPLICATION_WORKFLOW.md  COMPLETE_WORK_LOG_20251201.md  CONTRIBUTING.md  CREDENTIAL_PROVIDER_IMPLEMENTATION.md  DATAPLANE_ANALYSIS_SUMMARY.md  DATAPLANE_BUILDER_QUICKSTART.md  DATAPLANE_PLUGIN_ARCHITECTURE.md  DEPLOYMENT_TROUBLESHOOTING.md  DUAL_GRAPH_ARCHITECTURE_DIAGRAM.txt  DUAL_GRAPH_DESIGN_SUMMARY.md  DUAL_GRAPH_IMPLEMENTATION_EXAMPLE.py  DUAL_GRAPH_IMPLEMENTATION_STRATEGY.md  DUAL_GRAPH_INDEX.md  DUAL_GRAPH_QUERIES.cypher  DUAL_GRAPH_SCHEMA.md  E2E_CLI_TESTING_RESULTS.md  EXECUTION_PLAN_FOR_100_PERCENT_FIDELITY.md  FIDELITY_TRACKING.md  FINAL_COMPREHENSIVE_SUMMARY.md  (+83 more)
dotnet/: AzureTenantGrapher.sln  REMOVED_TESTS.md
examples/: README.md  azure_mcp_example.py  cross_tenant_deployment.sh  generate_identity_mapping.md  identity_mapping_example.json  performance_optimizations_demo.py  test_translation.py  version_tracking_workflow.py
hooks/: pre-commit-version-check.sh
iac_out/: graph_helper.py
iac_output/: errored.tfstate  generation_report.txt  main.tf.json  main.tf.json.backup_1687_resources  translation_report.txt
iac_output_new/: generation_report.txt  main.tf.json  translation_report.json  translation_report.txt
iac_output_regenerated/: translation_report.json  translation_report.txt
iac_output_with_fixes/: .terraform.tfstate.lock.info  generation_report.txt  main.tf.json  main.tf.json.backup  (+1 more)
(+2838 files in other folders)
